--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   "homepage": "https://github.com/oximer/trash#readme",
   "devDependencies": {
     "git-guppy": "^2.1.0",
-    "gulp": "^3.9.1"
+    "gulp": "^3.9.1",
+    "guppy-pre-commit": "^0.4.0"
   }
 }
